--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: No Title Bar\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-07-25 03:54-0400\n"
+"POT-Creation-Date: 2017-08-02 17:55-0400\n"
 "PO-Revision-Date: 2017-07-25 03:54-0400\n"
 "Last-Translator: Fran Glais <franglais125@gmail.com>\n"
 "Language-Team: \n"
@@ -17,30 +17,50 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #: Settings.ui.h:1
-msgid "Remove title bars only on the main monitor"
-msgstr ""
+msgid "Window control buttons"
+msgstr "Boutons de contrôle des fenêtres"
 
 #: Settings.ui.h:2
-msgid "Show buttons on the top bar"
-msgstr "Afficher les boutons des fenêtres sur la barre supérieure"
+msgid "Before app menu"
+msgstr "Avant le menu d'application"
 
 #: Settings.ui.h:3
+msgid "After app menu"
+msgstr "Après le menu d'application"
+
+#: Settings.ui.h:4
+msgid "Within status area"
+msgstr "Avant le menu système"
+
+#: Settings.ui.h:5
+msgid "After status area"
+msgstr "Après le menu système"
+
+#: Settings.ui.h:6
+msgid "Hidden"
+msgstr "Ne pas afficher"
+
+#: Settings.ui.h:8
+msgid "Remove title bars only on the main monitor"
+msgstr "Masquer les barres des fenêtres seulement dans le moniteur principal"
+
+#: Settings.ui.h:7
 msgid "Replace App Menu name with Window name"
 msgstr "Utiliser le nom de la fenêtre pour le menu d'application"
 
-#: Settings.ui.h:4
+#: Settings.ui.h:9
 msgid "Basic settings"
 msgstr "Paramètres simples"
 
-#: Settings.ui.h:5
+#: Settings.ui.h:10
 msgid "Maintained by"
 msgstr "Maintenu par"
 
-#: Settings.ui.h:6
+#: Settings.ui.h:11
 msgid "Webpage"
 msgstr "Page web"
 
-#: Settings.ui.h:7
+#: Settings.ui.h:12
 msgid ""
 "<span size=\"small\">This program comes with ABSOLUTELY NO WARRANTY.\n"
 "See the <a href=\"https://www.gnu.org/licenses/old-licenses/gpl-2.0.html"
@@ -51,6 +71,6 @@ msgstr ""
 "\">Licence Générale Publique GNU version 2 ou plus récente</a> pour plus "
 "d'informations.</span>"
 
-#: Settings.ui.h:9
+#: Settings.ui.h:14
 msgid "About"
 msgstr "À propos"
